# ydata-profiling

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  .travis.yml  404.html  CNAME  CONTRIBUTING.md  Install.bat  LICENSE  MANIFEST.in  Makefile  README.md  Sample.txt  Summarizer Customization.ipynb  __init__.py  abc.html  appveyor.yml  commitlint.config.cjs  commitlint.config.js  exploratory data analysis  formatters.py  index.html  install-spark.sh  install.bat  latest  make.bat  mkdocs.yml  mypy.ini  pandas_profiling.mplstyle  pandas_report.html  profile_csv.py  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements-docs.txt  requirements-pandas.txt  requirements-spark.txt  requirements-test.txt  requirements.txt  (+9 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  semantic-pr-title.yml  semantic.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_form.yaml  feature_request.md  feature_request_form.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: benchmark.yml  ci.yml  ci_release.yml  ci_test.yml  commit.yml  docs-releases.yml  docs.yaml  docs.yml  lint.yml  merge-dev.yml  merge-master.yaml  merge-master.yml  prerelease.yml  pull-request.yml  pypi.yml  release-deprecated.yml  release.yml  sonarqube.yaml  stale.yml  tests.yml  triage.yml
4.10/: 404.html  index.html
4.10/search/: search_index.json
4.12/: 404.html  index.html
4.12/search/: search_index.json
4.14/: 404.html  index.html
4.16/: 404.html  index.html  objects.inv
4.18/: 404.html  index.html
4.18/search/: search_index.json
4.5/: 404.html  index.html
4.5/search/: search_index.json
4.6/: 404.html  index.html
4.6/search/: search_index.json
4.7/search/: search_index.json
4.8/: 404.html  index.html
4.8/search/: search_index.json
4.8/stylesheets/: extra.css
4.9/: index.html
4.9/search/: search_index.json
controller/: console.html
dask_profiling/: __init__.py  base.py  describe.py  formatters.py  plot.py  report.py  scratch  templates.py  tests.py
dask_profiling/templates/: base.html  correlations.html  freq_table.html  mini_freq_table.html  row_const.html  row_corr.html  row_date.html  sample.html  wrapper.html
dev/bench/: data.js
docs/: README.md  config.html  index.html  index.md  version.html
docs/BRANCH_NAME/: config.html
docs/advanced_settings/: analytics.md  available_settings.md  caching.md  changing_settings.md  collaborative_data_profiling.md
docs/advanced_usage/: custom_translations.md
docs/ci-env/: config.html  expectations_report.html  index.html  profile_report.html  version.html
docs/controller/: console.html  index.html  pandas_decorator.html
docs/features/: big_data.md  collaborative_data_profiling.md  comparing_datasets.md  custom_reports.md  internationalization.md  metadata.md  pii_identification_management.md  profile_values.md  sensitive_data.md  time_series_datasets.md
docs/getting-started/: concepts.md  examples.md  installation.md  quickstart.md
docs/integrations/: bytewax.md  great_expectations.md  ides.md  interactive_applications.md  other_dataframe_libraries.md  pipelines.md  pyspark.md
docs/master/: .buildinfo  config.html  expectations_report.html  genindex.html  index.html  objects.inv  profile_report.html  py-modindex.html  search.html  searchindex.js  serialize_report.html  version.html
docs/model/: base.html  correlations.html  describe.html  index.html  messages.html
docs/reference/: history.md  resources.md
docs/report/: formatters.html  index.html
docs/stylesheets/: extra.css
docs/support-contribution/: common_issues.md  contribution_guidelines.md  help_troubleshoot.md
docs/utils/: cache.html  common.html  data_types.html  dataframe.html  index.html  notebook.html  paths.html  progress_bar.html
docs/v2.6.0/: index.html  version.html
docs/v2.7.0/: index.html  serialize.html
docs/v2.8.0/: config.html  index.html  version.html
docs/v2.9.0rc1/: index.html  profile_report.html  serialize_report.html  version.html
docs/v3.2.0/: config.html  index.html  profile_report.html  version.html
docs/v3.3.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/v3.3.1/: index.html  py-modindex.html  searchindex.js
docs/v3.4.0/: objects.inv  search.html  searchindex.js
docs/view/: formatters.html  index.html  notebook.html  plot.html  report.html  templates.html
docs/visualisation/: index.html  missing.html  plot.html  utils.html
docsrc/: Makefile  make.bat  setup.sh
docsrc/source/: conf.py  index.rst
docsrc/workflow/: workflow.md
examples/: Untitled.ipynb  app.py  meteorites-dask.ipynb  meteorites.ipynb  zero_division.py
examples/AviationData/: AviationDataProfiling.py
examples/bank_marketing_data/: banking_data.py  uci_bank_marketing_report.html
examples/census/: census.py  census_column_definition.json  census_report.html
examples/chicago_employees/: chicago_employees.py  chicago_employees_report.html
examples/colors/: colors.py  colors_report.html
examples/features/: correlation_auto_example.ipynb  correlation_auto_example.py  correlation_demo.py  eda_dataset_compare.py  great_expectations_example.py  images_cats_and_dogs.py  images_exif.py  mask_sensitive.py  russian_vocabulary.py  spark_example.py  theme_flatly_demo.py  theme_united_demo.py  urls.py
examples/nza/: nza.py  (+3 more)
latest/: 404.html  index.html
model/: correlations.html  describe.html
pandas_profiling/: SB_Johnson.py  __init__.py  base.py  config.py  config_default.yaml  config_minimal.yaml  correlation.py  describe.py  formatters.py  pandas_profiling.mplstyle  plot.py  report.py  sb_hide_ignored.js  templates.py  test.py  tests.py  version.py  vertica.py
report/: formatters.html
tests/: conftest.py  sanitize-notebook.cfg  test_date.py  test_decorator.py  test_describe.py  test_example.py  test_jupyter_notebook.py  test_modular.py  test_url.py
utils/: cache.html  common.html  notebook.html
visualisation/: index.html  missing.html  plot.html  utils.html
(+3469 files in other folders)
