[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ydata-profiling"
authors = [
    {name = "YData Labs Inc", email = "opensource@ydata.ai"},
]
description="Generate profile report for pandas DataFrame"
readme = "README.md"
requires-python=">=3.7, <3.12"
keywords=["pandas", "data-science", "data-analysis", "python", "jupyter", "ipython"]
license = {text = "MIT"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering",
    "Framework :: IPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "scipy>=1.4.1, <1.12",
    "pandas>1.1, <2.1, !=1.4.0",
    "matplotlib>=3.2, <=3.7.3",
    "pydantic>=1.8.1, <2",
    "PyYAML>=5.0.0, <6.1",
    "jinja2>=2.11.1, <3.2",
    "visions[type_image_path]==0.7.5",
    "numpy>=1.16.0,<1.24",
    # Could be optional
    # Related to HTML report
    "htmlmin==0.1.12",
    # Correlations
    "phik>=0.11.1,<0.13",
    # Examples
    "requests>=2.24.0, <3",
    # Progress bar
    "tqdm>=4.48.2, <5",
    "seaborn>=0.10.1, <0.13",
    "multimethod>=1.4, <2",
    # metrics
    "statsmodels>=0.13.2, <1",
    # type checking
    "typeguard>=2.13.2, <3",
    "imagehash==4.3.1",
    "wordcloud>=1.9.1",
    "dacite>=1.8",
]

dynamic = ["version"]

[project.optional-dependencies]
# dependencies for development and testing
dev = [
    "autodoc_pydantic",
    "black>=20.8b1",
    "isort>=5.0.7",
    "myst-parser>=0.18.1",
    "pre-commit>=2.8.2",
    "sphinx_rtd_theme>=0.4.3",
    "sphinx-autodoc-typehints>=1.10.3",
    "sphinx-multiversion>=0.2.3",
    "twine",
    "virtualenv>=20.0.33",
    "wheel",
]
# this provides the recommended pyspark and pyarrow versions for spark to work on pandas-profiling
# note that if you are using pyspark 2.3 or 2.4 and pyarrow >= 0.15, you might need to
# set ARROW_PRE_0_15_IPC_FORMAT=1 in your conf/spark-env.sh for toPandas functions to work properly
spark = [
    "pyspark>=2.3.0",
    "pyarrow>=2.0.0",
]
test = [
    "codecov",
    "coverage~=6.5",
    "kaggle",
    "nbval",
    "pytest",
    "pytest-cov",
    "pyarrow",
    "twine>=3.1.1",
]
notebook = [
    "jupyter-client>=5.3.4",
    "jupyter-core>=4.6.3",
    "ipywidgets>=7.5.1",
]
docs = [
    "mike>=1.1.2,<2.0.0",
    "mkdocs>=1.4.2,<1.5.2",
    "mkdocstrings[python]>=0.20.0,<1.0.0",
    "mkdocs-material>=9.0.12,<10.0.0",
    "mkdocs-material-extensions>=1.1.1,<2.0.0",
    "mkdocs-table-reader-plugin<=2.0.1",
    "mkdocs-badges",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ydata_profiling = ["py.typed"]

[tool.setuptools]
include-package-data = true

[project.scripts]
ydata_profiling = "ydata_profiling.controller.console:main"
pandas_profiling = "ydata_profiling.controller.console:main"

[project.urls]
homepage = "https://github.com/ydataai/ydata-profiling"