[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ydata-profiling"
authors = [
    {name = "YData Labs Inc", email = "opensource@ydata.ai"},
]
description="Generate profile report for pandas DataFrame"
readme = "README.md"
requires-python=">=3., <3.13"
keywords=["pandas", "data-science", "data-analysis", "python", "jupyter", "ipython"]
license = {text = "MIT"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering",
    "Framework :: IPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "scipy>=1.4.1, <1.14",
    "pandas>1.1, <3.0, !=1.4.0",
    "matplotlib>=3.5, <=3.10",
    "pydantic>=2",
    "PyYAML>=5.0.0, <6.1",
    "jinja2>=2.11.1, <3.2",
    "visions[type_image_path]>=0.7.5, <0.7.7",
    "numpy>=1.16.0,<2.2",
    # Could be optional
    # Related to HTML report
    "htmlmin==0.1.12",
    # Correlations
    "phik>=0.11.1,<0.13",
    # Examples
    "requests>=2.24.0, <3",
    # Progress bar
    "tqdm>=4.48.2, <5",
    "seaborn>=0.10.1, <0.14",
    "multimethod>=1.4, <2",
    # metrics
    "statsmodels>=0.13.2, <1",
    # type checking
    "typeguard>=3, <5",
    "imagehash==4.3.1",
    "wordcloud>=1.9.3",
    "dacite>=1.8",
    "numba>=0.56.0, <1",
]

dynamic = ["version"]

[project.optional-dependencies]
# dependencies for development and testing
dev = [
    "black>=20.8b1",
    "isort>=5.0.7",
    "pre-commit>=2.8.2",
    "virtualenv>=20.0.33",
    "twine",
    "wheel",
    "myst-parser>=0.18.1",
    "sphinx_rtd_theme>=0.4.3",
    "sphinx-autodoc-typehints>=1.10.3",
    "sphinx-multiversion>=0.2.3",
    "autodoc_pydantic",
]
# this provides the recommended pyspark and pyarrow versions for spark to work on pandas-profiling
# note that if you are using pyspark 2.3 or 2.4 and pyarrow >= 0.15, you might need to
# set ARROW_PRE_0_15_IPC_FORMAT=1 in your conf/spark-env.sh for toPandas functions to work properly
spark = [
    "pyspark>=2.3.0",
    "pyarrow>=2.0.0",
    "pandas>1.1, <2, !=1.4.0",
    "numpy>=1.26.4,<1.27",
    "visions[type_image_path]==0.7.5",
]
test = [
    "pytest",
    "coverage>=6.5, <8",
    "codecov",
    "pytest-cov",
    "pytest-spark",
    "nbval",
    "pyarrow",
    "twine>=3.1.1",
    "kaggle",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.5.1",
]
docs = [
    "mkdocs>=1.6.0,<1.7.0",
    "mkdocs-material>=9.0.12,<10.0.0",
    "mkdocs-material-extensions>=1.1.1,<2.0.0",
    "mkdocs-table-reader-plugin<=2.2.0",
    "mike>=2.1.1,<2.2.0",
    "mkdocstrings[python]>=0.20.0,<1.0.0",
    "mkdocs-badges",
]
unicode= [
    "tangled-up-in-unicode==0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ydata_profiling = ["py.typed"]

[tool.setuptools]
include-package-data = true

[project.scripts]
ydata_profiling = "ydata_profiling.controller.console:main"
pandas_profiling = "ydata_profiling.controller.console:main"

[project.urls]
homepage = "https://github.com/ydataai/ydata-profiling"